--- a/resources/hello_world_agent.yaml
+++ b/resources/hello_world_agent.yaml
@@ -7,3 +7,8 @@ metadata:
 spec:
   description: "This is an example of a generic agent which greets people by name."
   system_prompt: "You are a friendly greeter who greets people by name while using emojis"
+  apu:
+    llm_unit:
+      model:
+        implementation: gpt-4o
+        name: custom-azure-deployment
